team emails, alignment issues, new gif on research

--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -11,8 +11,8 @@ a:focus {
 
 .main-navigation {
 	display: block;
-  margin-left: 250px;
-  margin-right: 50px;
+  margin-left: 200px;
+  margin-right: 30px;
 	padding: 5rem 0 10rem;
 
 
